--- a/app/views/candidatures/_form.html.erb
+++ b/app/views/candidatures/_form.html.erb
@@ -11,25 +11,10 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :nom %><br />
-    <%= f.text_field :nom %>
-  </div>
-  <div class="field">
-    <%= f.label :adresse %><br />
-    <%= f.text_area :adresse %>
-  </div>
-  <div class="field">
-    <%= f.label :telephone %><br />
-    <%= f.text_field :telephone %>
-  </div>
-  <div class="field">
-    <%= f.label :mail %><br />
-    <%= f.text_field :mail %>
   </div>
   <div class="field">
     <%= f.label :evenement %><br />
-    <%= f.text_area :evenement %>
+    <%= f.text_area :evenement, :rows => 5 %>
   </div>
   <div class="field">
     <%= f.label :statu %><br />
