--- a/app/views/candidatures/edit.html.erb
+++ b/app/views/candidatures/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @candidature %> |
-<%= link_to 'Back', candidatures_path %>
+<%= link_to 'Voir', @candidature %> |
+<%= link_to 'Retour', candidatures_path %>
