--- a/app/views/candidatures/new.html.erb
+++ b/app/views/candidatures/new.html.erb
@@ -1,5 +1,5 @@
-<h1>Nouvelle candidature</h1>
-
+<h1>Proposer une nouvelle</h1>
+<h1>candidature d'évenement</h1>
 <%= render 'form' %>
 
-<%= link_to 'Back', candidatures_path %>
+<%= link_to 'Retour', candidatures_path %>
