--- a/app/views/candidatures/show.html.erb
+++ b/app/views/candidatures/show.html.erb
@@ -1,16 +1,6 @@
-<p id="notice"><%= notice %></p>
-
-
+<h3>Evenement proposé:</h3>
 <p>
-  <b>Evenement:</b>
   <%= @candidature.evenement %>
 </p>
 
-<p>
-  <b>Statu:</b>
-  <%= @candidature.statu %>
-</p>
 
-
-<%= link_to 'Edit', edit_candidature_path(@candidature) %> |
-<%= link_to 'Back', candidatures_path %>
