--- a/app/views/membres/_form.html.erb
+++ b/app/views/membres/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :adresse %><br />
-    <%= f.text_area :adresse %>
+    <%= f.text_area :adresse, :rows => 5 %>
   </div>
   <div class="field">
     <%= f.label :telephone %><br />
