--- a/app/views/membres/new.html.erb
+++ b/app/views/membres/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New membre</h1>
+<h1>Nouvelle inscription</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', membres_path %>
+<br/>
+<%= link_to 'Dejà inscrit, et vous souhaitez proposer un nouvelle évenement', new_session_path %>
+
+
