--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,14 @@
 		<%= content_tag(:div, raw(value), :class => "flash #{key}") %>
 	<% end %>
 <%= yield %>
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
 <hr />
 PARAMS : <%= params %> <br />
-SESSION : <%= session %>
+SESSION : <%= session %> <br />
 </body>
 </html>
