textarea rows size

--- a/app/views/evenements/_form.html.erb
+++ b/app/views/evenements/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :detail %><br />
-    <%= f.text_area :detail %>
+    <%= f.text_area :detail , :rows => 5%>
   </div>
   <div class="field">
     <%= f.label :statut %><br />
@@ -29,7 +29,7 @@
   </div>
   <div class="field">
     <%= f.label :adresse %><br />
-    <%= f.text_area :adresse %>
+    <%= f.text_area :adresse, :rows => 5 %>
   </div>
   <div class="field">
     <%= f.label :membre_id %><br />
