--- a/app/views/evenements/_form.html.erb
+++ b/app/views/evenements/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@evenement) do |f| %>
   <% if @evenement.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@evenement.errors.count, "error") %> prohibited this evenement from being saved:</h2>
+      <h2><%= pluralize(@evenement.errors.count, "erreur") %> dans votre saisie :</h2>
 
       <ul>
       <% @evenement.errors.full_messages.each do |msg| %>
@@ -20,28 +20,12 @@
     <%= f.text_area :detail , :rows => 5%>
   </div>
   <div class="field">
-    <%= f.label :statut %><br />
-    <%= f.text_field :statut %>
-  </div>
-  <div class="field">
     <%= f.label :date %><br />
     <%= f.datetime_select :date %>
   </div>
   <div class="field">
     <%= f.label :adresse %><br />
     <%= f.text_area :adresse, :rows => 5 %>
-  </div>
-  <div class="field">
-    <%= f.label :membre_id %><br />
-    <%= f.text_field :membre_id %>
-  </div>
-  <div class="field">
-    <%= f.label :region_id %><br />
-    <%= f.text_field :region_id %>
-  </div>
-  <div class="field">
-    <%= f.label :whodunit %><br />
-    <%= f.text_field :whodunit %>
   </div>
   <div class="actions">
     <%= f.submit %>
