--- a/app/views/evenements/show.html.erb
+++ b/app/views/evenements/show.html.erb
@@ -6,14 +6,15 @@
 </p>
 
 <p>
+  <b>Organisé par:</b>
+  <%= @evenement.membre.nom %>
+</p>
+
+<p>
   <b>Detail:</b>
   <%= @evenement.detail %>
 </p>
 
-<p>
-  <b>Statut:</b>
-  <%= @evenement.statut %>
-</p>
 
 <p>
   <b>Date:</b>
@@ -26,19 +27,10 @@
 </p>
 
 <p>
-  <b>Membre:</b>
-  <%= @evenement.membre_id %>
-</p>
-
-<p>
   <b>Region:</b>
   <%= @evenement.region_id %>
 </p>
 
-<p>
-  <b>Whodunit:</b>
-  <%= @evenement.whodunit %>
-</p>
 
 
 <%= link_to 'Edit', edit_evenement_path(@evenement) %> |
