--- a/app/views/membres/_form.html.erb
+++ b/app/views/membres/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@membre) do |f| %>
   <% if @membre.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@membre.errors.count, "error") %> prohibited this membre from being saved:</h2>
+      <h2><%= pluralize(@membre.errors.count, "erreur") %> dans votre saisie:</h2>
 
       <ul>
       <% @membre.errors.full_messages.each do |msg| %>
