forgotrn files: rename evenement attribute detail to descritpion

--- a/app/views/evenements/index.html.erb
+++ b/app/views/evenements/index.html.erb
@@ -3,7 +3,7 @@
 <table>
   <tr>
     <th>Titre</th>
-    <th>Detail</th>
+    <th>description</th>
     <th>Statut</th>
     <th>Date</th>
     <th>Adresse</th>
@@ -18,7 +18,7 @@
 <% @evenements.each do |evenement| %>
   <tr>
     <td><%= evenement.titre %></td>
-    <td><%= evenement.detail %></td>
+    <td><%= evenement.description %></td>
     <td><%= evenement.statut %></td>
     <td><%= evenement.date %></td>
     <td><%= evenement.adresse %></td>
