--- a/app/views/evenements/_form.html.erb
+++ b/app/views/evenements/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_field :titre %>
   </div>
   <div class="field">
-    <%= f.label :detail %><br />
-    <%= f.text_area :detail , :rows => 5%>
+    <%= f.label :description %><br />
+    <%= f.text_area :description , :rows => 5%>
   </div>
   <div class="field">
     <%= f.label :date %><br />
