--- a/app/views/membres/_form.html.erb
+++ b/app/views/membres/_form.html.erb
@@ -12,8 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :nom %><br />
+    <%= f.label :nom, "Nom de votre organisation" %><br />
     <%= f.text_field :nom %>
+  </div>
+  <div class="field">
+    <%= f.label :responsable, raw("Nom du responsable de l'&eacute;venement") %><br />
+    <%= f.text_field :responsable %>
   </div>
   <div class="field">
     <%= f.label :mail %><br />
