--- a/app/views/evenements/_form.html.erb
+++ b/app/views/evenements/_form.html.erb
@@ -24,6 +24,10 @@
     <%= f.datetime_select :date %>
   </div>
   <div class="field">
+    <%= f.label :region %><br />
+    <%= collection_select(:region, :id, @regions, :id, :nom, options ={:prompt => "Indiquer votre Region"}) %>
+  </div>
+  <div class="field">
     <%= f.label :adresse %><br />
     <%= f.text_area :adresse, :rows => 5 %>
   </div>
